src/cli/snapshots/biwa__cli__init__tests__init_json.snap
---
source: src/cli/init.rs
expression: content
---
{
  "$schema": "https://biwa.takuk.me/schema/config.json",
  "clean": {
    "auto": true,
    "max_age": "30days",
    "quota_thresholds": {}
  },
  "direct": {
    "bin_dir": null,
    "commands": {}
  },
  "env": {
    "forward_method": "export",
    "vars": []
  },
  "hooks": {
    "post_sync": null,
    "pre_sync": null
  },
  "ssh": {
    "auth": "public-key",
    "host": "cse.unsw.edu.au",
    "host_key_checking": "strict",
    "key_path": null,
    "known_hosts": null,
    "port": null,
    "umask": "077",
    "use_ssh_config": true,
    "user": null
  },
  "state_dir": null,
  "sync": {
    "auto": true,
    "default_to_git_root": true,
    "engine": "sftp",
    "exclude": [
      "**/.git/**",
      "**/target/**",
      "**/node_modules/**"
    ],
    "remote_root": "~/.cache/biwa/projects",
    "sftp": {
      "cache": {
        "enabled": true,
        "path": null
      },
      "max_files_to_sync": 100,
      "permissions": "recreate"
    },
    "sync_root": null
  }
}
