src/cli/snapshots/biwa__cli__init__tests__init_toml.snap
---
source: src/cli/init.rs
expression: content
---
#:schema https://biwa.takuk.me/schema/config.json

# Root configuration struct for biwa.

# Local state directory for connection tracking and daemon PID files.
#
# If unset, biwa uses an XDG/platform default path. `BIWA_STATE_DIR` always
# takes precedence over this setting.
#state_dir =

# SSH connection configuration.
[ssh]
# Hostname or IP address of the remote host.
#
# Can also be specified via environment variable `BIWA_SSH_HOST`.
#
# Default value: "cse.unsw.edu.au"
#host = "cse.unsw.edu.au"

# Optional port override. If unset, uses OpenSSH config and then port 22.
#
# Can also be specified via environment variable `BIWA_SSH_PORT`.
#port =

# Optional username. If unset, uses the matching OpenSSH `User` value.
#
# Can also be specified via environment variable `BIWA_SSH_USER`.
#user =

# Whether to read `~/.ssh/config` when resolving the target.
#
# Can also be specified via environment variable `BIWA_SSH_USE_CONFIG`.
#
# Default value: true
#use_ssh_config = true

# Optional path to the SSH private key.
#
# Can also be specified via environment variable `BIWA_SSH_KEY_PATH`.
#key_path =

# Policy for verifying the SSH server's host key.
#
# Can also be specified via environment variable `BIWA_SSH_HOST_KEY_CHECKING`.
#
# Default value: "strict"
#host_key_checking = "strict"

# Optional known-hosts file override.
#
# Can also be specified via environment variable `BIWA_SSH_KNOWN_HOSTS`.
#known_hosts =

# Password authentication: `false` (default), `true` (prompt), or a string value.
#
# Can also be specified via environment variable `BIWA_SSH_PASSWORD`.
#
# Default value: false
#password = false

# Umask to apply before executing commands and creating directories (3-digit octal: owner/group/other).
# To set the first digit (setuid/setgid/sticky), run `umask` manually on the remote server.
# Note that you cannot loosen the default umask set by the server (e.g., 027 in UNSW CSE).
# You need to use `chmod` manually if you want looser permissions. However, this umask setting
# cannot restrict manual permission modifications via `chmod` (be careful with `chmod +x` or `+r`).
#
# Can also be specified via environment variable `BIWA_SSH_UMASK`.
#
# Default value: "077"
#umask = "077"

# Remote synchronization configuration.
[sync]
# Automatically synchronize the project before running remote commands.
#
# Can also be specified via environment variable `BIWA_SYNC_AUTO`.
#
# Default value: true
#auto = true

# Base directory to start the synchronization from. If not specified, uses the nearest Git root by default, falling back to the current directory.
#
# Can also be specified via environment variable `BIWA_SYNC_ROOT`.
#sync_root =

# Use the nearest Git root as the default sync root when `sync_root` is not set.
#
# Can also be specified via environment variable `BIWA_SYNC_DEFAULT_TO_GIT_ROOT`.
#
# Default value: true
#default_to_git_root = true

# Remote directory to sync the project to.
#
# Can also be specified via environment variable `BIWA_SYNC_REMOTE_ROOT`.
#
# Default value: "~/.cache/biwa/projects"
#remote_root = "~/.cache/biwa/projects"

# Files and directories to exclude during synchronization using globset patterns.
#
# Default value: ["**/.git/**", "**/target/**", "**/node_modules/**"]
#exclude = ["**/.git/**", "**/target/**", "**/node_modules/**"]

# The synchronization engine to use.
#
# Can also be specified via environment variable `BIWA_SYNC_ENGINE`.
#
# Default value: "sftp"
#engine = "sftp"

# SFTP engine specific configuration.
[sync.sftp]
# Abort synchronization if the number of files to sync exceeds this limit.
#
# Can also be specified via environment variable `BIWA_SYNC_SFTP_MAX_FILES_TO_SYNC`.
#
# Default value: 100
#max_files_to_sync = 100

# Strategy for enforcing file permissions on uploaded files.
#
# Can also be specified via environment variable `BIWA_SYNC_SFTP_PERMISSIONS`.
#
# Default value: "recreate"
#permissions = "recreate"

# Environment variables configuration.
[env]
# Environment variables to send to the remote process.
#
# Supports exact names and values such as
# `vars = ["NODE_ENV", "API_KEY=secret"]`, wildcard rules such as
# `vars = ["NODE_*", "!*PATH"]`, and `[env.vars]` table forms.
#
# Default value: []
#vars = []

# Forwarding strategy for environment variables.
#
# Can also be specified via environment variable `BIWA_ENV_FORWARD_METHOD`.
#
# Default value: "export"
#forward_method = "export"

# Lifecycle hooks for synchronization.
[hooks]
# Command to run before synchronization.
#pre_sync =

# Command to run after synchronization.
#post_sync =

# Cleanup configuration for stale remote directories.
[clean]
# Hard age limit: directories older than this are always removed during auto-cleanup.
# Internally stored as the 0% quota threshold.
# Accepts strings like "30d", "12h", "45m", "60s", or "30" (= 30 minutes).
#
# Default value: "30d"
#max_age = "30d"

# Enable automatic background cleanup after `run`/`sync`/`pull`.
#
# Can also be specified via environment variable `BIWA_CLEAN_AUTO`.
#
# Default value: true
#auto = true

# Quota-based cleanup thresholds.
#
# Keys are disk quota usage percentages (0-100), values are maximum directory ages.
# When quota usage exceeds a threshold percentage, directories older than the
# corresponding age are removed. The `max_age` value is merged as the 0% threshold.
#
# Example: `{ 80 = "5d" }` means clean dirs older than 5 days when quota ≥ 80%.
#
# Default value: {  }
#quota_thresholds = {  }

# Direct command shim configuration.
[direct]
# Directory containing direct command shims. If unset, uses the platform data directory.
#
# Can also be specified via environment variable `BIWA_DIRECT_BIN_DIR`.
#bin_dir =

# Exact command names and the `biwa run` options inserted before each command.
#
# Default value: {  }
#commands = {  }
